--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,12 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.1.0",
     "anylist": "^0.8.5",
-    "zod": "^3.24.1"
+    "zod": "^3.25.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.19.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4"
   }
 }
